--- a/bobs.html
+++ b/bobs.html
@@ -130,6 +130,7 @@
 
 	<div class="navbar">
 		<a href="#overview" onclick="toggleSection('overview')" class="active">Overview</a>
+		<a href="#primary-groups" onclick="toggleSection('primary-groups')">Test</a>
 		<a href="#topics" onclick="toggleSection('topics')">Topics</a>
 		<a href="#journey-stages" onclick="toggleSection('journey-stages')">Journey Stages</a>
 		<a href="#guides" onclick="toggleSection('guides')">Guides</a>
@@ -144,75 +145,33 @@
 		<section id="overview" class="active">
 			<img src="https://i.ibb.co/KszHcvp/overview.png" alt="overview" border="0" class="full-img">
 			<h1>Overview</h1>
-			<p>Welcome to the Bob's Discount Furniture AI Agent Page. Navigate through the sections to explore Topics, Journey Stages, Guides, Tools, and more.</p>
+			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and adaptive system.</p>
 			
 			<img src="https://i.ibb.co/njWpPr9/agent.png" alt="agent" border="0" class="inline-img">
 			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
+			
+		</section>
+		
+		<section id="primary-groups">
+			<h1>Primary Groups</h1>
 			<img src="https://i.ibb.co/cLhznT8/sales-agent.png" alt="agent" border="0" class="inline-img">
 			<img src="https://i.ibb.co/18mP8rX/care-agent.png" alt="robot" border="0" class="inline-img">
-		</section>
-		<section id="topics">
-			<h1>Topics</h1>
-			<p>Here you'll find information about different customer service topics.</p>
-			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="topics" border="0">
-
-			<h3>Product Information Requests</h3>
-			<p>General questions about furniture specifications such as dimensions, materials, and care instructions.</p>
-
-			<h3>Order Placement Assistance</h3>
-			<p>Specific requests for help with placing an order through the website or in-store.</p>
-
-			<h3>Order, Delivery, and Service Status Updates</h3>
-			<p>Customers checking the status of their order, including shipping and delivery timelines.</p>
-
-			<h3>Delivery Scheduling</h3>
-			<p>Assistance with scheduling or rescheduling delivery dates and understanding delivery options.</p>
-
-			<h3>Order Modifications</h3>
-			<p>Customer requests for modifying existing orders, such as changing color, size, or quantity.</p>
-
-			<h3>Product Availability Checks</h3>
-			<p>Inquiries about the availability of specific items, including wait times for out-of-stock products.</p>
-
-			<h3>Return and Exchange Inquiries</h3>
-			<p>Assist customers with the process for returning or exchanging items, and understanding associated policies.</p>
-
-			<h3>Warranty Service Requests</h3>
-			<p>Questions about warranty terms and requests for service under warranty conditions.</p>
-
-			<h3>Refund Processes</h3>
-			<p>Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.</p>
-
-			<h3>Assembly Instructions</h3>
-			<p>Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.</p>
-
-			<h3>Promotions and Discounts</h3>
-			<p>Information about current promotions, sales events, and eligibility for discounts.</p>
-
-			<h3>Payment and Billing Issues</h3>
-			<p>Help with issues related to payments, billing errors, or financing options.</p>
-
-			<h3>Website Navigation Help</h3>
-			<p>Assistance with navigating the online store, using features like wish lists and product comparisons.</p>
-
-			<h3>Customer Feedback and Complaints</h3>
-			<p>Providing a channel for customer feedback or filing complaints about their shopping experience.</p>
-
-			<h3>Store Pickup Inquiries</h3>
-			<p>Help with managing online customer accounts, password recovery, and updating personal information.</p>
-
-		</section>
-
-		<section id="topics">
-			<h1>Topics</h1>
-			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img"/>
-			<p>Here you'll find information about different customer service topics.</p>
+			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 		</section>
 
 		<section id="journey-stages">
 			<h1>Journey Stages</h1>
 			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img"/>
-			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
+			<p>The AI further refines its understanding of the inquiry by identifying the user's stage in the Customer Journey. These stages include:
+
+				- Pre-Purchase: Customers exploring product details, availability, or promotions.
+				- Pre-Delivery Scheduling: Customers who have purchased and need to arrange delivery.
+				- Delivery Scheduled: Customers confirming or preparing for their scheduled delivery.
+				- Day of Delivery: Real-time coordination and tracking on the delivery day.
+				- Recently Delivered: Assistance with immediate post-delivery needs such as assembly or damages.
+				- Furniture in the Home: Long-term inquiries about care, warranty, or recycling.
+
+				Understanding the user stage enables the AI to provide tailored responses and proactively address potential concerns.</p>
 		</section>
 
 		<section id="guides">
